--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,22 +15,43 @@
 			data-sap-ui-resourceroots='{"shamat.LimeApp": "shamat/LimeApp"}'>
 		</script>
 
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-		<script>
-			sap.ui.getCore().attachInit(function() {
-				new sap.m.Shell({
-					app: new sap.ui.core.ComponentContainer({
-						height : "100%",
-						name : "shamat.LimeApp"
+	<script>
+		sap.ui.getCore().attachInit(function() {
+			if (navigator.userAgent.indexOf("AppleWebKit") >= 0 && navigator.userAgent.indexOf("Chrome") < 0 && navigator.userAgent.indexOf("iPhone") < 0) {
+				document.body.firstElementChild.className = "IOS";
+			}			
+			try {
+				sap.ui.require([
+					"shamat/LimeApp/localService/mockserver",
+					"sap/m/Shell",
+					"sap/ui/core/ComponentContainer"
+					], function (mockserver, Shell, ComponentContainer) {
+						mockserver.init();				
+						new sap.m.Shell({
+							app: new sap.ui.core.ComponentContainer({
+								height : "100%",
+								name : "shamat.LimeApp" 
 
-					})
-				}).placeAt("content");
+							})
+						}).placeAt("content");
+					});
+			} catch (e) {
+				if (e && e.stack) {
+					console.error(e.stack);
+				} else if (e && e.message) {
+					console.error(e.message);
+				} else {
+						// at this point language dependent texts may not be available
+						console.error("Technical Error");
+					}
+				}   
 			});
 		</script>
 	</head>
 
-	<body class="sapUiBody" id="content">
-	</body>
+<body class="sapUiBody" id="content">
+</body>
 
 </html>
