--- a/webapp/shamat/LimeApp/test/mockServer.html
+++ b/webapp/shamat/LimeApp/test/mockServer.html
@@ -8,16 +8,16 @@
 		<title>LimeApp</title>
 
 		<script id="sap-ui-bootstrap"
-			src="../../resources/sap-ui-core.js"
+			src="https://sapui5.hana.ondemand.com/1.44.16/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-resourceroots='{
-				"shamat.LimeApp": "./shamat/LimeApp/"
+				"shamat.LimeApp": "../" 
 			}'>
 		</script>
 
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="../css/style.css">
 
 		<script>
 			sap.ui.getCore().attachInit(function() {
@@ -30,7 +30,7 @@
 						"sap/m/Shell",
 						"sap/ui/core/ComponentContainer"
 						], function (mockserver, Shell, ComponentContainer) {
-							mockserver.init("./shamat/LimeApp/");				
+							mockserver.init("../");				
 							new sap.m.Shell({
 								app: new sap.ui.core.ComponentContainer({
 									height : "100%",
